tests/NormalTests/paczka1/fuzzy1/90794583.err
Error in line 11: hXzpY A719 -1,5
Error in line 9: hXzpY A719 18,0
Error in line 13: dPjTIL67r S99 48,1
Error in line 12: wjNZPdHf S99 18,4
Error in line 19: JPTzm4 A277 3,7
Error in line 31: wjNZPdHf S99 72,3
Error in line 25: DUnqV A719 36,4
Error in line 33: A277 A277 29,0
